--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro": "^4.16.18",
     "astro-compress": "^2.3.0",
     "astro-icon": "1.1.0",
+    "cheerio": "^1.0.0-rc.12",
     "colorjs.io": "^0.5.2",
     "hastscript": "^9.0.0",
     "markdown-it": "^14.1.0",
@@ -62,12 +63,13 @@
     "photoswipe": "^5.4.4",
     "remark-github-admonitions-to-directives": "^1.0.5",
     "sass": "^1.77.8",
-    "stylus": "^0.63.0"
+    "stylus": "^0.64.0"
   },
   "pnpm": {
     "overrides": {
       "vite-imagetools": "^6.2.7",
-      "sharp": "^0.33.0"
+      "sharp": "^0.33.0",
+      "cheerio": "1.0.0-rc.12"
     }
   },
   "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
